5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1723_2504.log
== TEST (2019-05-12 21:58:35) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
tl = 0
virus = 0
leu = 0

while(l < 2*v):
	virus = virus + (qv * pv)
	leu = leu + (ql * pl)
	i = i + 1
print(i)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(l < 2*v):
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:58:55) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
tl = 0
virus = 0
leu = 0

while(leu < 2*virus):
	virus = virus + (qv * pv)
	leu = leu + (ql * pl)
	i = i + 1
print(i)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(i)
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:59:04) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
tl = 0
virus = 0
leu = 0

while(leu < 2*virus):
	virus = virus + (qv * pv)
	leu = leu + (ql * pl)
	i = i + 1
print(i)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(i)
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:59:26) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
tl = 0
virus = 0
leu = 0
i = 0

while(leu < 2*virus):
	virus = virus + (qv * pv)
	leu = leu + (ql * pl)
	i = i + 1
print(i)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(i)
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:00:20) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
tl = 0
virus = 0
leu = 0
i = 0

while(leu < 2*virus):
	virus = virus + (qv * pv)
	leu = leu + (ql * pl)
	total = i + 1
print(total)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:02:49) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))/100
pl = float(input("Percentual de multiplicacao dos leucocitos: "))/100
tl = 0
virus = 0
leu = 0
i = 0

while(leu < 2*virus):
	virus = virus + (qv * pv)
	leu = leu + (ql * pl)
	total = i + 1
print(total)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:06:00) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
virus = 0
leu = 0
i = 0

while(leu < 2*virus):
	virus = virus + (qv * (pv/100))
	leu = leu + (ql * (pl/100))
	total = i + 1
print(total)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:07:43) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
virus = 0
leu = 0
i = 0

while(leu < 2*virus):
	virus = virus + (qv * (pv/100))
	leu = leu + (ql * (pl/100))
	dias = i + 1
	print(dias)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:08:26) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
virus = 0
leu = 0
i = 0

while(leu < 2*virus):
	virus = virus + (qv * (pv/100))
	leu = leu + (ql * (pl/100))
	dias = i + 1
print(dias)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:10:30) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
virus = 0
leu = 0
i = 0

while(leu < 2*virus):
	i = i + 1
	virus = virus + (qv * (pv/100))
	leu = leu + (ql * (pl/100))
	
print(dias)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:10:37) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
virus = 0
leu = 0
i = 0

while(leu < 2*virus):
	i = i + 1
	virus = virus + (qv * (pv/100))
	leu = leu + (ql * (pl/100))
	
print(i)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:10:42) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
virus = 0
leu = 0
i = 0

while(leu < 2*virus):
	i = i + 1
	virus = virus + (qv * (pv/100))
	leu = leu + (ql * (pl/100))
	
print(i)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:17:41) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
virus = 0
leu = 0
dias = 0

while(leu < 2*virus):
	virus = virus + (qv * (pv/100))
	leu = leu + (ql * (pl/100))
	dias = dias + 1
print(dias)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:23:44) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
dias = 0

while(leu < 2 * virus):
	virus = (qv * (pv/100))
	sv = virus + (qv * (pv/100))
	leu = (ql * (pl/100))
	sl = leu + (ql * (pl/100))
	dias = dias + 1
print(dias)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(leu < 2 * virus):
NameError: name 'leu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:25:08) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
sv = 0
sl = 0
dias = 0

while(leu < 2 * virus):
	virus = sv + (qv * (pv/100))
	sv = virus + (qv * (pv/100))
	leu = sl + (ql * (pl/100))
	sl = leu + (ql * (pl/100))
	dias = dias + 1
print(dias)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(leu < 2 * virus):
NameError: name 'leu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:04:16) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
sv = 0
sl = 0
dias = 0

while(leu < 2 * virus):
	virus = sv + (qv * (pv/100))
	sv = virus + (qv * (pv/100))
	leu = sl + (ql * (pl/100))
	sl = leu + (ql * (pl/100))
	dias = dias + 1
print(dias)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(leu < 2 * virus):
NameError: name 'leu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:05:35) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
sv = 0
sl = 0
dias = 0

while(sl < 2 * sv):
	virus = sv + (qv * (pv/100))
	sv = virus + (qv * (pv/100))
	leu = sl + (ql * (pl/100))
	sl = leu + (ql * (pl/100))
	dias = dias + 1
print(dias)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(leu < 2 * virus):
NameError: name 'leu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:16:02) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
sv = 0
sl = 0
dias = 0

while(sl < 2 * sv):
	sl = sl + (ql * pl)
	sv = sv + (qv + pv)
	dias = dias + 1
print(dias)
	 
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(leu < 2 * virus):
NameError: name 'leu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:16:33) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
sv = 0
sl = 0

while(sl < 2 * sv):
	sl = sl + (ql * pl)
	sv = sv + (qv + pv)
	dias = dias + 1
print(dias)
	 
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:18:42) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))
sv = 0
sl = 0
dias = 0
while(sl < 2 * sv):
	sl = sl + (ql * pl)
	sv = sv + (qv * pv)
	dias = dias + 1
print(dias)

	 
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:56) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))

dias = 0
while(sl < 2 * sv):
	sl = sl + (ql * pl)
	sv = sv + (qv * pv)
	dias = dias + 1
print(dias)

	 
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(sl < 2 * sv):
NameError: name 'sl' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:21:24) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))

dias = 0
while(sl < (2 * sv)):
	sl = sl + (ql * pl)
	sv = sv + (qv * pv)
	dias = dias + 1
print(dias)

	 
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(sl < (2 * sv)):
NameError: name 'sl' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:22:31) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))
pl = float(input("Percentual de multiplicacao dos leucocitos: "))

dias = 0
while(sl < (2 * sv)):
	pl = pl + (ql * pl)
	pv = pv + (qv * pv)
	dias = dias + 1
print(dias)

	 
	
	

-- EXECUTION TIME:
0.183765
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2504/main.py", line 7, in <module>
    while(sl < (2 * sv)):
NameError: name 'sl' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:23:08) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))/100
pl = float(input("Percentual de multiplicacao dos leucocitos: "))/100

dias = 0
while(sl < (2 * sv)):
	pl = pl + (ql * pl)
	pv = pv + (qv * pv)
	dias = dias + 1
print(dias)

	 
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(sl < (2 * sv)):
NameError: name 'sl' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:23:10) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))/100
pl = float(input("Percentual de multiplicacao dos leucocitos: "))/100

dias = 0
while(sl < (2 * sv)):
	pl = pl + (ql * pl)
	pv = pv + (qv * pv)
	dias = dias + 1
print(dias)

	 
	
	

-- EXECUTION TIME:
0.128844
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2504/main.py", line 7, in <module>
    while(sl < (2 * sv)):
NameError: name 'sl' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:23:12) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))/100
pl = float(input("Percentual de multiplicacao dos leucocitos: "))/100

dias = 0
while(sl < (2 * sv)):
	pl = pl + (ql * pl)
	pv = pv + (qv * pv)
	dias = dias + 1
print(dias)

	 
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(sl < (2 * sv)):
NameError: name 'sl' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:23:59) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))/100
pl = float(input("Percentual de multiplicacao dos leucocitos: "))/100

dias = 0
while(sl < (2 * sv)):
	ql = ql + (ql * pl)
	qv = qv + (qv * pv)
	dias = dias + 1
print(dias)

	 
	
	

-- EXECUTION TIME:
0.187666
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2504/main.py", line 7, in <module>
    while(sl < (2 * sv)):
NameError: name 'sl' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:24:20) 
-- CODE:
qv = int(input("Quantidade inicial de copias: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Percentual de multiplicacao do virus: "))/100
pl = float(input("Percentual de multiplicacao dos leucocitos: "))/100

dias = 0
while(ql < (2 * qv)):
	ql = ql + (ql * pl)
	qv = qv + (qv * pv)
	dias = dias + 1
print(dias)

	 
	
	

-- EXECUTION TIME:
0.142597
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
